--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.0",
+    "chart.js": "^4.5.1",
+    "react-chartjs-2": "^5.3.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
