--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.0",
     "chart.js": "^4.5.1",
-    "react-chartjs-2": "^5.3.0",
+    "google-auth-library": "^9.15.1",
     "next": "latest",
     "react": "latest",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "latest"
   },
   "devDependencies": {
