Fix formatting in package.json dependencies

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "next": "latest",
     "react": "latest",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "latest",
-    "sharp": "^0.34.3"
+    "react-dom": "latest"
   },
   "devDependencies": {
     "@types/node": "latest",
