--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "latest",
     "react": "latest",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@types/node": "latest",
